--- a/src/sass/openeyes/sem/sidebar/event-list/_grouping.scss
+++ b/src/sass/openeyes/sem/sidebar/event-list/_grouping.scss
@@ -10,10 +10,11 @@
 	.grouping-picker {
 		color: var(--txt-light);
 		height: 28px;
-		padding: 0 5px 0 25px;
+		padding: 0;
 		margin:0 0 1px 0;
-		background-color: var(--bg-event);
-		background-position: left 5px center;
+		@include font-size(11);
+		text-align: center;
+		background: var(--bg-event);
 	}
 
 
