--- a/src/sass/openeyes/sem/sidebar/fixed-actions/_clinic-pathway-btn.scss
+++ b/src/sass/openeyes/sem/sidebar/fixed-actions/_clinic-pathway-btn.scss
@@ -13,7 +13,7 @@
 	// align with Event title better
 	margin: 1px 0;
 
-	@include font-size(13); // a little bigger than button text
+	@include font-size(12);
 	font-weight: var(--font-medium);
 
 	background: var(--bg-event);
